# ab-testing-platform

./: .gitignore  LICENSE  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.github/workflows/: ci.yml  publish.yml
ab_testing_platform/: __init__.py  actual_data.py  api.py  assignment.py  cli.py  models.py  pipeline.py  reporting.py  segmentation.py  serialization.py  service.py  simulation.py  statistics.py  storage.py  tracking.py
docs/: real-data.md
plugins/ab-testing-platform/: README.md
plugins/ab-testing-platform/.codex-plugin/: plugin.json
plugins/ab-testing-platform/examples/: actual-events.csv  actual-user-metrics.csv  smart-checkout-experiment.json
plugins/ab-testing-platform/scripts/: analyze_actual_data.py  run_demo_experiment.py  run_experiment_from_config.py  start_api_server.py
plugins/ab-testing-platform/skills/ab-testing-platform/: SKILL.md
tests/: test_actual_data.py  test_api.py  test_assignment.py  test_cli.py  test_pipeline.py  test_plugin_wrapper_scripts.py  test_statistics.py
