[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manikanta-ab-testing-platform"
version = "0.2.1"
description = "A/B testing and experimentation toolkit with simulation, CSV analysis, and an HTTP API."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
authors = [
  { name = "Manikanta J" }
]
maintainers = [
  { name = "Manikanta J" }
]
keywords = ["ab-testing", "experimentation", "statistics", "backend", "api"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/MANIKANTA-J"
Source = "https://github.com/MANIKANTA-J"

[project.optional-dependencies]
test = ["pytest>=8.0"]
publish = ["build>=1.2", "twine>=5.1"]

[project.scripts]
ab-testing-platform = "ab_testing_platform.cli:main"
abtp = "ab_testing_platform.cli:main"

[tool.setuptools]
packages = ["ab_testing_platform"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
